🌐 chore: update locale

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "إدارة الفواتير",
-    "default": {
-      "nickname": "مستخدم المجتمع",
-      "username": "نسخة معاينة للمجتمع"
-    },
+    "defaultNickname": "مستخدم النسخة المجتمعية",
     "discord": "الدعم المجتمعي",
     "docs": "وثائق الاستخدام",
     "email": "الدعم عبر البريد الإلكتروني",
     "feedback": "تقديم ملاحظات واقتراحات",
     "help": "مركز المساعدة",
+    "moveGuide": "تم نقل زر الإعدادات إلى هنا",
     "plans": "خطط الاشتراك",
     "profile": "إدارة الحساب",
     "setting": "إعدادات التطبيق",
-    "usages": "إحصاءات الاستخدام",
-    "warn": "هذا الدخول سيتم إيقافه قريبًا، يرجى استدعاء هذه القائمة من الزاوية العلوية اليسرى لاحقًا"
+    "usages": "إحصاءات الاستخدام"
   }
 }
