--- a/locales/bg-BG/common.json
+++ b/locales/bg-BG/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "Управление на сметките",
-    "default": {
-      "nickname": "Потребител на общността",
-      "username": "Преглед на общността"
-    },
+    "defaultNickname": "Потребител на общността",
     "discord": "Поддръжка на общността",
     "docs": "Документация",
     "email": "Поддръжка по имейл",
     "feedback": "Обратна връзка и предложения",
     "help": "Център за помощ",
+    "moveGuide": "Бутонът за настройки е преместен тук",
     "plans": "Планове за абонамент",
     "profile": "Управление на профила",
     "setting": "Настройки на приложението",
-    "usages": "Статистика за използване",
-    "warn": "Този вход скоро ще бъде премахнат, моля използвайте този меню, активирайки иконата в горния ляв ъгъл"
+    "usages": "Статистика за използване"
   }
 }
