--- a/locales/ja-JP/common.json
+++ b/locales/ja-JP/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "請求管理",
-    "default": {
-      "nickname": "コミュニティユーザー",
-      "username": "コミュニティプレビュー版"
-    },
+    "defaultNickname": "コミュニティユーザー",
     "discord": "コミュニティサポート",
     "docs": "使用文書",
     "email": "メールサポート",
     "feedback": "フィードバックと提案",
     "help": "ヘルプセンター",
+    "moveGuide": "設定ボタンがこちらに移動しました",
     "plans": "サブスクリプションプラン",
     "profile": "アカウント管理",
     "setting": "アプリ設定",
-    "usages": "利用量統計",
-    "warn": "このエントリはまもなく廃止されます。今後は左上隅のアイコンからこのメニューを呼び出してください"
+    "usages": "利用量統計"
   }
 }
