--- a/locales/ko-KR/common.json
+++ b/locales/ko-KR/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "결제 관리",
-    "default": {
-      "nickname": "커뮤니티 사용자",
-      "username": "커뮤니티 미리보기"
-    },
+    "defaultNickname": "커뮤니티 사용자",
     "discord": "커뮤니티 지원",
     "docs": "사용 설명서",
     "email": "이메일 지원",
     "feedback": "피드백 및 제안",
     "help": "도움말 센터",
+    "moveGuide": "설정 버튼을 여기로 이동했습니다",
     "plans": "요금제",
     "profile": "계정 관리",
     "setting": "앱 설정",
-    "usages": "사용량 통계",
-    "warn": "이 항목은 곧 종료될 예정이며, 향후에는 왼쪽 상단의 프로필 아이콘을 통해 이 메뉴를 호출하십시오"
+    "usages": "사용량 통계"
   }
 }
