--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "Управление счетами",
-    "default": {
-      "nickname": "Пользователь сообщества",
-      "username": "Предварительный просмотр сообщества"
-    },
+    "defaultNickname": "Пользователь сообщества",
     "discord": "Поддержка сообщества",
     "docs": "Документация",
     "email": "Поддержка по электронной почте",
     "feedback": "Обратная связь и предложения",
     "help": "Центр помощи",
+    "moveGuide": "Кнопка настроек перемещена сюда",
     "plans": "Планы подписки",
     "profile": "Управление аккаунтом",
     "setting": "Настройки приложения",
-    "usages": "Статистика использования",
-    "warn": "Этот раздел скоро будет закрыт, пожалуйста, в дальнейшем используйте меню, вызываемое изображением в левом верхнем углу"
+    "usages": "Статистика использования"
   }
 }
