--- a/locales/es-ES/common.json
+++ b/locales/es-ES/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "Gestión de facturación",
-    "default": {
-      "nickname": "Usuario de la comunidad",
-      "username": "Vista previa de la comunidad"
-    },
+    "defaultNickname": "Usuario de la comunidad",
     "discord": "Soporte de la comunidad",
     "docs": "Documentación de uso",
     "email": "Soporte por correo electrónico",
     "feedback": "Comentarios y sugerencias",
     "help": "Centro de ayuda",
+    "moveGuide": "El botón de configuración se ha movido aquí",
     "plans": "Planes de suscripción",
     "profile": "Gestión de cuenta",
     "setting": "Configuración de la aplicación",
-    "usages": "Estadísticas de uso",
-    "warn": "Esta entrada pronto se eliminará, por favor, acceda a este menú desde la imagen de perfil en la esquina superior izquierda"
+    "usages": "Estadísticas de uso"
   }
 }
