--- a/locales/pt-BR/common.json
+++ b/locales/pt-BR/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "Gerenciamento de faturas",
-    "default": {
-      "nickname": "Usuário da Comunidade",
-      "username": "Visualização da Comunidade"
-    },
+    "defaultNickname": "Usuário da Comunidade",
     "discord": "Suporte da Comunidade",
     "docs": "Documentação",
     "email": "Suporte por E-mail",
     "feedback": "Feedback e Sugestões",
     "help": "Central de Ajuda",
+    "moveGuide": "O botão de configurações foi movido para cá",
     "plans": "Planos de Assinatura",
     "profile": "Gerenciamento de Conta",
     "setting": "Configurações do Aplicativo",
-    "usages": "Estatísticas de Uso",
-    "warn": "Este acesso será descontinuado, por favor, acesse este menu a partir do ícone do perfil no canto superior esquerdo"
+    "usages": "Estatísticas de Uso"
   }
 }
