--- a/locales/vi-VN/common.json
+++ b/locales/vi-VN/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "Quản lý hóa đơn",
-    "default": {
-      "nickname": "Người dùng cộng đồng",
-      "username": "Phiên bản xem trước cộng đồng"
-    },
+    "defaultNickname": "Người dùng phiên bản cộng đồng",
     "discord": "Hỗ trợ cộng đồng",
     "docs": "Tài liệu sử dụng",
     "email": "Hỗ trợ qua email",
     "feedback": "Phản hồi và đề xuất",
     "help": "Trung tâm trợ giúp",
+    "moveGuide": "Đã di chuyển nút cài đặt đến đây",
     "plans": "Kế hoạch đăng ký",
     "profile": "Quản lý tài khoản",
     "setting": "Cài đặt ứng dụng",
-    "usages": "Thống kê sử dụng",
-    "warn": "Cổng này sẽ sớm ngừng hoạt động, vui lòng mở menu từ biểu tượng ở góc trên bên trái"
+    "usages": "Thống kê sử dụng"
   }
 }
