--- a/locales/zh-CN/common.json
+++ b/locales/zh-CN/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "账单管理",
-    "default": {
-      "nickname": "社区用户",
-      "username": "社区预览版"
-    },
+    "defaultNickname": "社区版用户",
     "discord": "社区支持",
     "docs": "使用文档",
     "email": "邮件支持",
     "feedback": "反馈与建议",
     "help": "帮助中心",
+    "moveGuide": "设置按钮搬到这里啦",
     "plans": "订阅方案",
     "profile": "账户管理",
     "setting": "应用设置",
-    "usages": "用量统计",
-    "warn": "此入口即将下线，后续请从左上角头像唤起本菜单"
+    "usages": "用量统计"
   }
 }
