--- a/locales/zh-TW/common.json
+++ b/locales/zh-TW/common.json
@@ -160,19 +160,16 @@
   },
   "userPanel": {
     "billing": "帳單管理",
-    "default": {
-      "nickname": "社區用戶",
-      "username": "社區預覽版"
-    },
+    "defaultNickname": "社群版使用者",
     "discord": "社區支援",
     "docs": "使用文件",
     "email": "郵件支援",
     "feedback": "反饋與建議",
     "help": "幫助中心",
+    "moveGuide": "設置按鈕搬到這裡啦",
     "plans": "訂閱方案",
     "profile": "帳戶管理",
     "setting": "應用設定",
-    "usages": "用量統計",
-    "warn": "此入口即將下線，後續請從左上角頭像喚起本選單"
+    "usages": "用量統計"
   }
 }
