💄 style : Add an "Assistant and Conversation" icon

--- a/locales/ar/chat.json
+++ b/locales/ar/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "لا يوجد مساعد",
   "historyRange": "نطاق التاريخ",
   "inbox": {
+    "agentsAndConversations": "الوكلاء والمحادثات",
     "desc": "قم بتشغيل مجموعة الدماغ وأشعل شرارة التفكير. مساعدك الذكي، هنا حيث يمكنك التواصل بكل شيء",
     "title": "دردشة عشوائية"
   },
