--- a/locales/en-US/chat.json
+++ b/locales/en-US/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "No assistant available",
   "historyRange": "History Range",
   "inbox": {
+    "agentsAndConversations": "Agents and Conversations",
     "desc": "Activate the brain cluster and spark creative thinking. Your virtual agent is here to communicate with you about everything.",
     "title": "Just Chat"
   },
