--- a/locales/es-ES/chat.json
+++ b/locales/es-ES/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "No hay asistente disponible",
   "historyRange": "Rango de historial",
   "inbox": {
+    "agentsAndConversations": "agentesYConversaciones",
     "desc": "Despierta la mente con el poder del cerebro colectivo. Tu asistente inteligente está aquí para conversar contigo sobre cualquier cosa.",
     "title": "Charla casual"
   },
