--- a/locales/bg-BG/chat.json
+++ b/locales/bg-BG/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "Няма наличен асистент",
   "historyRange": "Диапазон на историята",
   "inbox": {
+    "agentsAndConversations": "агенти и разговори",
     "desc": "Активирай мозъчния клъстер и събуди креативното мислене. Твоят виртуален агент е тук, за да общува с теб за всичко.",
     "title": "Просто чати"
   },
