--- a/locales/ja-JP/chat.json
+++ b/locales/ja-JP/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "エージェントがいません",
   "historyRange": "履歴範囲",
   "inbox": {
+    "agentsAndConversations": "エージェントと会話",
     "desc": "脳のクラスターを起動し、創造性を引き出しましょう。あなたのスマートアシスタントは、あなたとすべてのことについてここでコミュニケーションします。",
     "title": "気軽におしゃべり"
   },
