--- a/locales/ru-RU/chat.json
+++ b/locales/ru-RU/chat.json
@@ -21,6 +21,7 @@
   "emptyAgent": "Нет ассистента",
   "historyRange": "История сообщений",
   "inbox": {
+    "agentsAndConversations": "Агенты и разговоры",
     "desc": "Зажги искру мысли, открой кластер мозгов. Твой виртуальный ассистент, готовый обсудить все с тобой.",
     "title": "Просто поболтаем"
   },
