--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -58,6 +58,7 @@
     },
     "title": "استيراد البيانات"
   },
+  "installPWA": "تثبيت تطبيق الويب",
   "lang": {
     "ar": "العربية",
     "bg-BG": "البلغارية",
