--- a/locales/de-DE/common.json
+++ b/locales/de-DE/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Daten importieren"
   },
+  "installPWA": "Installieren Sie die App",
   "lang": {
     "ar": "Arabisch",
     "bg-BG": "Bulgarisch",
