--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Import Data"
   },
+  "installPWA": "Install App",
   "lang": {
     "ar": "Arabic",
     "bg-BG": "Bulgarian",
