--- a/locales/pl-PL/common.json
+++ b/locales/pl-PL/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Import danych"
   },
+  "installPWA": "Zainstaluj aplikację",
   "lang": {
     "ar": "arabski",
     "bg-BG": "bułgarski",
