--- a/locales/pt-BR/common.json
+++ b/locales/pt-BR/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Importar dados"
   },
+  "installPWA": "Instalar PWA",
   "lang": {
     "ar": "árabe",
     "bg-BG": "Búlgaro",
