--- a/locales/it-IT/chat.json
+++ b/locales/it-IT/chat.json
@@ -20,6 +20,7 @@
   },
   "duplicateTitle": "{{title}} Copia",
   "emptyAgent": "Nessun assistente disponibile",
+  "historyRange": "Intervallo cronologico",
   "inbox": {
     "desc": "Attiva il cluster cerebrale, accendi la scintilla del pensiero. Il tuo assistente intelligente, qui per comunicare con te su tutto.",
     "title": "Chiacchierata casuale"
