✨ feat: support DeepSeek as provider

--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -230,6 +230,15 @@ If you need to use Azure OpenAI to provide model services, you can refer to the 
 - Default: -
 - Example: `xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx=`
 
+## DeepSeek AI
+
+### `DEEPSEEK_API_KEY`
+
+- Type: Required
+- Description: This is the API key you applied for in the DeepSeek AI service
+- Default: -
+- Example: `sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx`
+
 ## Groq AI
 
 ### `GROQ_API_KEY`
