--- a/locales/en-US/plugin.json
+++ b/locales/en-US/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Function Call",
     "off": "Turn off debug",
     "on": "View plugin invocation information",
-    "response": "Response"
+    "payload": "Plugin Payload",
+    "response": "Response",
+    "tool_call": "Tool Call Request"
   },
   "detailModal": {
     "info": {
@@ -128,10 +130,6 @@
     "plugin": "Plugin is running..."
   },
   "pluginList": "Plugin List",
-  "plugins": {
-    "loading": "Detecting plugins...",
-    "unknown": "Unknown Plugin"
-  },
   "setting": "Plugin Settings",
   "settings": {
     "indexUrl": {
@@ -162,5 +160,6 @@
       "installed": "Installed"
     },
     "title": "Plugin Store"
-  }
+  },
+  "unknownPlugin": "Unknown Plugin"
 }
