--- a/locales/nl-NL/plugin.json
+++ b/locales/nl-NL/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "函数调用",
     "off": "关闭调试",
     "on": "查看插件调用信息",
-    "response": "返回结果"
+    "payload": "载荷",
+    "response": "返回结果",
+    "tool_call": "工具调用请求"
   },
   "detailModal": {
     "info": {
@@ -128,10 +130,6 @@
     "plugin": "Plugin wordt uitgevoerd..."
   },
   "pluginList": "Lijst met plugins",
-  "plugins": {
-    "loading": "Plugins worden gecontroleerd...",
-    "unknown": "Onbekende plugin"
-  },
   "setting": "Plugin-instellingen",
   "settings": {
     "indexUrl": {
@@ -162,5 +160,6 @@
       "installed": "Geïnstalleerd"
     },
     "title": "Pluginwinkel"
-  }
+  },
+  "unknownPlugin": "未知插件"
 }
