--- a/locales/bg-BG/metadata.json
+++ b/locales/bg-BG/metadata.json
@@ -1,7 +1,6 @@
 {
   "chat": {
-    "description": "LobeChat предлага най-доброто използване на ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "LobeChat: Личен инструмент за ефективност LLM, надхвърлящ използването на ChatGPT / OLLaMA"
+    "description": "LobeChat предлага най-доброто използване на ChatGPT, OLLaMA, Gemini, Claude WebUI"
   },
   "market": {
     "description": "Създаване на съдържание, копирайтинг, въпроси и отговори, генериране на изображения, генериране на видео, генериране на глас, интелигентен агент, автоматизирани работни процеси, персонализирайте си собствения AI / GPTs / OLLaMA интелигентен асистент",
@@ -12,7 +11,6 @@
     "title": "Пазар на добавки"
   },
   "welcome": {
-    "description": "LobeChat предлага най-доброто използване на ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "Добре дошли в LobeChat: Личен инструмент за ефективност LLM, надхвърлящ използването на ChatGPT / OLLaMA"
+    "description": "LobeChat предлага най-доброто използване на ChatGPT, OLLaMA, Gemini, Claude WebUI"
   }
 }
