--- a/locales/fr-FR/metadata.json
+++ b/locales/fr-FR/metadata.json
@@ -1,18 +1,16 @@
 {
   "chat": {
-    "description": "LobeChat offre la meilleure expérience d'utilisation de ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "LobeChat : outil personnel LLM pour une expérience d'utilisation supérieure à celle de ChatGPT / OLLaMA"
+    "description": "LobeChat offre la meilleure expérience d'utilisation de ChatGPT, OLLaMA, Gemini, Claude WebUI"
   },
   "market": {
-    "description": "Création de contenu, rédaction, questions-réponses, génération d'images, génération de vidéos, génération vocale, agent intelligent, flux de travail automatisé, personnalisez votre assistant intelligent AI / GPTs / OLLaMA",
-    "title": "Marché des assistants"
+    "description": "Création de contenu, rédaction, questions-réponses, génération d'images, génération de vidéos, génération vocale, agent intelligent, flux de travail automatisé, personnalisez votre agent intelligent AI / GPTs / OLLaMA",
+    "title": "Marché des agents"
   },
   "plugins": {
     "description": "Recherche, génération de graphiques, académique, génération d'images, génération de vidéos, génération vocale, flux de travail automatisé, personnalisez les capacités des plugins ToolCall exclusifs de ChatGPT / OLLaMA",
     "title": "Marché des plugins"
   },
   "welcome": {
-    "description": "LobeChat offre la meilleure expérience d'utilisation de ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "Bienvenue sur LobeChat : outil personnel LLM pour une expérience d'utilisation supérieure à celle de ChatGPT / OLLaMA"
+    "description": "LobeChat offre la meilleure expérience d'utilisation de ChatGPT, OLLaMA, Gemini, Claude WebUI"
   }
 }
