--- a/locales/ja-JP/metadata.json
+++ b/locales/ja-JP/metadata.json
@@ -1,7 +1,6 @@
 {
   "chat": {
-    "description": "LobeChatは、ChatGPT、OLLaMA、Gemini、Claude WebUIの最高の使用体験を提供します",
-    "title": "LobeChat：個人LLM生産性ツール、ChatGPT / OLLaMAの体験を超える"
+    "description": "LobeChatは、ChatGPT、OLLaMA、Gemini、Claude WebUIの最高の使用体験を提供します"
   },
   "market": {
     "description": "コンテンツ作成、コピーライティング、質問回答、画像生成、動画生成、音声生成、スマートエージェント、ワークフローの自動化、あなただけのAI / GPTs / OLLaMAスマートアシスタントをカスタマイズ",
@@ -12,7 +11,6 @@
     "title": "プラグインマーケット"
   },
   "welcome": {
-    "description": "LobeChatは、ChatGPT、OLLaMA、Gemini、Claude WebUIの最高の使用体験を提供します",
-    "title": "LobeChatをご利用いただきありがとうございます：個人LLM生産性ツール、ChatGPT / OLLaMAの体験を超える"
+    "description": "LobeChatは、ChatGPT、OLLaMA、Gemini、Claude WebUIの最高の使用体験を提供します"
   }
 }
