--- a/locales/zh-CN/metadata.json
+++ b/locales/zh-CN/metadata.json
@@ -1,7 +1,7 @@
 {
   "chat": {
     "description": "LobeChat 带给你最好的 ChatGPT, OLLaMA, Gemini, Claude WebUI 使用体验",
-    "title": "LobeChat：个人 LLM 效能工具，超越 ChatGPT / OLLaMA 使用体验"
+    "title": "LobeChat：个人 LLM 效能工具，给自己一个更聪明的大脑"
   },
   "market": {
     "description": "内容创作、文案、问答、图像生成、视频生成、语音生成、智能 Agent、自动化工作流，定制你专属的 AI / GPTs / OLLaMA 智能助手",
@@ -13,6 +13,6 @@
   },
   "welcome": {
     "description": "LobeChat 带给你最好的 ChatGPT, OLLaMA, Gemini, Claude WebUI 使用体验",
-    "title": "欢迎使用 LobeChat：个人 LLM 效能工具，超越 ChatGPT / OLLaMA 使用体验"
+    "title": "欢迎使用 LobeChat：个人 LLM 效能工具，给自己一个更聪明的大脑"
   }
 }
