--- a/locales/es-ES/metadata.json
+++ b/locales/es-ES/metadata.json
@@ -1,7 +1,6 @@
 {
   "chat": {
-    "description": "LobeChat ofrece la mejor experiencia de uso de ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "LobeChat: herramienta personal de LLM para una experiencia superior a la de ChatGPT / OLLaMA"
+    "description": "LobeChat ofrece la mejor experiencia de uso de ChatGPT, OLLaMA, Gemini, Claude WebUI"
   },
   "market": {
     "description": "Creación de contenido, redacción, preguntas y respuestas, generación de imágenes, generación de videos, generación de voz, agente inteligente, flujo de trabajo automatizado, personaliza tu asistente inteligente AI / GPTs / OLLaMA exclusivo",
@@ -12,7 +11,6 @@
     "title": "Mercado de complementos"
   },
   "welcome": {
-    "description": "LobeChat ofrece la mejor experiencia de uso de ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "¡Bienvenido a LobeChat: herramienta personal de LLM para una experiencia superior a la de ChatGPT / OLLaMA"
+    "description": "LobeChat ofrece la mejor experiencia de uso de ChatGPT, OLLaMA, Gemini, Claude WebUI"
   }
 }
