--- a/locales/it-IT/metadata.json
+++ b/locales/it-IT/metadata.json
@@ -1,7 +1,6 @@
 {
   "chat": {
-    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "LobeChat: strumento personale di efficienza LLM, esperienza d'uso superiore a ChatGPT / OLLaMA"
+    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI"
   },
   "market": {
     "description": "Creazione di contenuti, copywriting, domande e risposte, generazione di immagini, generazione di video, generazione vocale, agente intelligente, flusso di lavoro automatizzato, personalizza il tuo assistente intelligente AI / GPTs / OLLaMA",
@@ -12,7 +11,6 @@
     "title": "Mercato dei plugin"
   },
   "welcome": {
-    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI",
-    "title": "Benvenuti su LobeChat: strumento personale di efficienza LLM, esperienza d'uso superiore a ChatGPT / OLLaMA"
+    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI"
   }
 }
